--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,45 @@ img{
   background-color: black;
   color: white ;
 }
+
+.back {
+  height: 40vh;
+  position: relative;
+}
+
+.back img {
+  height: 40vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.back::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* height: 100%; */
+  height: 40vh;
+  background: rgba(17, 40, 72, 0.629);
+  z-index: -1;
+}
+
+.back .container {
+  color: aliceblue;
+  text-align: center;
+
+}
+
+
+.back h1 {
+  font-style: 40px;
+  font-weight: 500;
+}
+
+.mb {
+  margin-bottom: 80px;
+}
