--- a/src/components/recent/recent.css
+++ b/src/components/recent/recent.css
@@ -26,3 +26,9 @@
     border-top: 1px solid #efe8f3;
     padding:  10px 30px;
 }
+
+@media screen and (max-width:768px) {
+    .grid3 {
+        display: block;
+    }
+}
