--- a/src/components/Headers.css
+++ b/src/components/Headers.css
@@ -87,7 +87,7 @@ display: none;
             top: 15vh;
             left: 0;
             width: 100%;
-            background-color: #27ae60;
+            /* background-color: #27ae60; */
             padding: 20px;
         }
                  header li a{
@@ -155,6 +155,7 @@ header .small{
         width: 100%;
         background-color: #27ae60;
         padding: 20px;
+        
     }
 
 }
