--- a/src/components/Headers.css
+++ b/src/components/Headers.css
@@ -1,4 +1,4 @@
-.flex{
+/* .flex{
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -61,7 +61,7 @@ header h4{
 }
 header .toggle{
     display: none;
-}
+} */
 
 @media screen and (max-width :768px) {
    header{
