--- a/src/components/Headers.css
+++ b/src/components/Headers.css
@@ -1,4 +1,4 @@
-/* .flex{
+.flex{
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -61,7 +61,7 @@ header h4{
 }
 header .toggle{
     display: none;
-} */
+}
 
 @media screen and (max-width :768px) {
    header{
@@ -70,7 +70,8 @@ header .toggle{
    } 
    header img{
     margin-top: 39px;
-
+ height: 50px;
+ width: 50px;
    }
    header .button{
     display :none;
@@ -86,8 +87,8 @@ display: none;
             position: absolute;
             top: 15vh;
             left: 0;
-            width: 100%;
-            /* background-color: #27ae60; */
+            width: 94%;
+            background-color: #27ae60;
             padding: 20px;
         }
                  header li a{
@@ -119,7 +120,7 @@ header .small{
     position: absolute;
     top: 15vh;
     left: 0;
-    width: 100%;
+    width: 94%;
     background-color: #27ae60;
     padding: 20px;
 }
@@ -152,7 +153,7 @@ header .small{
         position: absolute;
         top: 15vh;
         left: 0;
-        width: 100%;
+        width: 94%;
         background-color: #27ae60;
         padding: 20px;
         
